# GPIO-Manager

./: .gitignore  DEPLOYMENT.md  README.md  SECURITY_CAMERA.md  deploy.sh  manage.py  mariadb.cnf  package-lock.json  package.json  pyproject.toml  rad.py  requirements.txt  temp.py  vite.config.js
GPIO/: apps.py  models.py  regression.py  urls.py  views.py
GPIO/management/commands/: clear.py  cron.py  cronjob.py  measure.py  monitor.py  rad.py  runpir.py  simulate.py  train.py  videosave.py
GPIO/sensors/: bme680.py  pir.py  rcwl.py
GPIO/templates/GPIO/: dashboard.html
apache/: cron.txt  django.conf  nginx.conf  wsgi.load
energymanager/: asgi.py  package-lock.json  package.json  settings.py  urls.py  vite.config.js  wsgi.py
energymanager/GPIO/: models.py  regression.csv  urls.py  views.py
energymanager/GPIO/migrations/: 0001_initial.py
energymanager/GPIO/sensors/: bme680.py
energymanager/energymanager/: settings.py
energymanager/frontend/: Button.jsx  globals.js  index.js  main.js  main.jsx
energymanager/frontend/components/: Board.jsx  Button.jsx  GraphInterface.jsx  Sidebar.jsx
energymanager/frontend/scss/: app.scss
energymanager/static/: manifest.json
frontend/: globals.js  main.jsx
frontend/components/: Board.jsx  Button.jsx  Dashboard.jsx  GraphInterface.jsx  Icon.jsx  Prediction.jsx  Recordings.jsx  RegressionChart.jsx  Sidebar.jsx  VideoPlayer.jsx
frontend/utils/: Timeformatter.js  chart-options.js  prediction.js
nginx/: load_nginx.sh  nginx.conf
scripts/: bme680_read.py  picam_record.py  pir_monitor.py  rcwl_detect.py  save_mp4.py
trainingdata/: basedata.csv
(+30 files in other folders)
