[project]
name = "gpio-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.10.0",
    "django==4.2.25",
    "django-vite==3.1.0",
    "gunicorn>=26.0.0",
    "importlib-metadata==4.13.0",
    "importlib-resources==5.13.0",
    "joblib==1.5.3",
    "mysqlclient>=2.2.8",
    "numpy==2.4.2",
    "pandas==3.0.0",
    "pip==25.3",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "setuptools==80.10.1",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "zipp==3.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
